--- a/components/navbar.html
+++ b/components/navbar.html
@@ -24,10 +24,10 @@
     //set Active link according to pages
     var origin = window.location.origin;
     var page_location = window.location.href.replace(origin + '/', '').trim();
-    // console.log(page_location);
-    $('.navbar_links a[href*="' + page_location + '"]').addClass('active').siblings().removeClass('active');
+     console.log(page_location);
+    // $('.navbar_links a[href*="' + page_location + '"]').addClass('active').siblings().removeClass('active');
     
-    if (page_location == "" || null) {
-        $('.navbar_links a[href="/"]').addClass('active').siblings().removeClass('active');
-    }
+    // if (page_location == "" || null) {
+    //     $('.navbar_links a[href="/"]').addClass('active').siblings().removeClass('active');
+    // }
 </script>
