--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg">
     <!--  navbar-dark bg-primary -->
     <div class="container">
-        <a class="navbar-brand" href="/thp-site">Name</a>
+        <a class="navbar-brand" href="/thp-site">THP</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -13,7 +13,16 @@
                     <a class="nav-link" href="/thp-site">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/thp-site">About Us</a>
+                    <a class="nav-link" href="/thp-site">Apply</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/thp-site">Tracks</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/thp-site">FAQ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/thp-site">Contact</a>
                 </li>
             </ul>
         </div>
