--- a/css/main.css
+++ b/css/main.css
@@ -1,79 +1,99 @@
-/*style for desktop view (need to make it mobile responsive later)*/
-
-/* style specifies a width for container */
-.container {
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
+html {
+  scroll-behavior: smooth !important;
 }
 
-/*style makes images responsive */
-.img {
-	max-width: 100%;
-	clear: left;
+body {
+    font-family: 'IBM Plex Mono', monospace;
+    color: black;
 }
 
-/* style specifies clear and top margin properties for the main element */
-main {
-	clear: left;
-	background-color: grey;
+.left-footer {
+  text-align: right;
 }
 
-/*style for the nav specifies text properties*/
-nav {
-	font-family: Sans-serif;
-	font-size: 1.25em;
-	font-weight: bold;
-	text-align: center;
-  background-color: #ffffff69 !important;
+.row {
+    margin-bottom: 50px;
 }
 
-/* style specifies margin and padding for the unordered list within the nav */
-nav ul {
-	width: 100%;
-}
-
-/* style for navigation list items specifies a border radius, border, margin, width, and padding */
-nav li {
-	border-top: solid #090817;
-	border-bottom: solid #090817; 
-	margin-left: 0;
-	margin-right: 0;
-	width: 50%;
-	background-color: #ffffff;
-}
-
-nav li:hover {
-  background-color: #E41C3A;
-}
-
-/* style for navigation link items specifies a text color */
-.navbar-light .navbar-nav .nav-link {
-  color: black;
-}
-
-/* footer css */
-footer {
-    padding: 25px 0;
+#navbar {
+    position: absolute;
+    width:100%;
+    overflow:hidden;
+    z-index: 1;
+    background-color: transparent;
+    border-bottom: 1px solid white;
+  }
+  
+  #navbar a {
+    float: right;
+    color: #f2f2f2;
     text-align: center;
-    color: rgba(255, 255, 255, 0.3);
-    background-color: #222222;
-  }
-  
-  footer p {
-    font-size: 12px;
-    margin: 0;
-  }
-  
-  footer ul {
-    margin-bottom: 0;
-  }
-  
-  footer ul li a {
-    font-size: 12px;
-    color: rgba(255, 255, 255, 0.3);
-  }
-  
-  footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li a.active {
+    padding: 14px 45px;
     text-decoration: none;
+    font-size: 17px;
   }
+  
+  #navbar a:hover {
+    background-color: black;
+  }
+
+  .active_custom {
+    color: white !important;
+    background-color: black;
+  }
+  
+  .content {
+    padding: 16px;
+  }
+  
+  .sticky {
+    position: fixed;
+  }
+
+.fp-slidesNav {
+    text-align: center;
+}
+
+.fp-controlArrow.fp-prev {
+    border-color: transparent transparent transparent transparent;
+}
+.fp-controlArrow.fp-next {
+    border-color: transparent transparent transparent transparent;
+}
+
+.fp-slidesNav {
+    border-top: 1px solid white;
+}
+
+#fp-nav {
+    border-right: 1px solid white;
+    display:flex;
+    height: 100%;
+    align-items:center;
+    justify-content: center;
+}
+
+#fp-nav.fp-left {
+    left: 0px;
+    color: black;
+}
+
+#fp-nav ul li a span, .fp-slidesNav ul li a span{
+    background: rgb(255, 255, 255);
+}
+
+.fp-tooltip {
+    padding-left: 5px;
+}
+
+#fp-nav ul li .fp-tooltip {
+    color: rgb(255, 255, 255);
+}
+#fp-nav ul li .fp-tooltip.fp-left {
+  font-weight: bold;
+  font-family: 'IBM Plex Mono', monospace;
+}
+
+#fp-nav ul li:last-child { /* footer navlink */
+    display: none;
+}
