--- a/css/apply.css
+++ b/css/apply.css
@@ -31,6 +31,7 @@
     list-style-type: circle !important;
     margin-bottom: 10px;
     border-bottom: 1px solid black;
+    overflow: hidden;
 }
 
 .custom-ul li:last-child{
@@ -43,3 +44,9 @@
     border-radius: 10px;
     text-align: center;
 }
+
+@media (max-width: 990px) {
+    .general-content.first{
+        margin-top: 150px !important;
+    }
+  }
